[package]
name = "scrob"
version = "0.1.0"
edition = "2024"
authors = ["Jake Goldsborough"]

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
async-graphql = { version = "7.0", features = ["chrono"] }
async-graphql-axum = "7.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
bcrypt = "0.15"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
chrono = "0.4"
rand = "0.8"
hex = "0.4"
